--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								<div class="head-pt rt">
 									<div class="lf glyname">
 										<p class="txtcenter gly">操作员</p>
-										<p class="txtcenter glyName">张珊</p>
+										<p class="txtcenter glyName">范冰冰</p>
 									</div>
 									<div class="rt head-pic">
 										<img src="img/head-pic.jpg" alt="" />
@@ -163,7 +163,7 @@
 											<div class="ordertitle txtcenter">订单明细</div>
 											<ul class="clear mingxi">
 												<li class="lf">订单号：<span>201703200110321</span></li>
-												<li class="lf">操&nbsp;&nbsp;作&nbsp;&nbsp;员：<span>张珊</span></li>
+												<li class="lf">操&nbsp;&nbsp;作&nbsp;&nbsp;员：<span>范冰冰</span></li>
 												<li class="lf">餐&nbsp;&nbsp;&nbsp;台：<span>A区001</span></li>
 												<li class="lf">用餐人数：<span>5</span></li>
 												<li class="lf change tangs active "><p></p></li>
@@ -512,7 +512,7 @@
 											<div class="ordertitle txtcenter">订单明细</div>
 											<ul class="clear mingxi">
 												<li class="lf">订单号：<span>201703200110321</span></li>
-												<li class="lf">操&nbsp;&nbsp;作&nbsp;&nbsp;员：<span>张珊</span></li>
+												<li class="lf">操&nbsp;&nbsp;作&nbsp;&nbsp;员：<span>范冰冰</span></li>
 												<li class="lf">支付方式：<span>银行卡</span></li>
 												<li class="lf">发&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;票：<span>未开</span></li>
 												<li class="lf"><a href="#">反结算</a></li>
@@ -597,7 +597,7 @@
 											<li class="lf long">201703210025214</li>
 											<li class="lf">微信</li>
 											<li class="lf long">2017/03/21 12:00</li>
-											<li class="lf short">张珊</li>
+											<li class="lf short">范冰冰</li>
 											<li class="lf">2300.00</li>
 											<li class="lf shishou">2500.00</li>
 											<li class="lf short">200.00</li>
@@ -608,7 +608,7 @@
 											<li class="lf long">201703210025214</li>
 											<li class="lf">微信</li>
 											<li class="lf long">2017/03/21 12:00</li>
-											<li class="lf short">张珊</li>
+											<li class="lf short">范冰冰</li>
 											<li class="lf">2300.00</li>
 											<li class="lf shishou">2500.00</li>
 											<li class="lf short">200.00</li>
@@ -680,7 +680,7 @@
 															<ul class="jbmsg">
 																<li>
 																	<span class="jbName">营&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;业&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;员:</span>
-																	<span class="jbinfo">张珊</span>
+																	<span class="jbinfo">范冰冰</span>
 																</li>
 																<li>
 																	<span class="jbName">当&nbsp;&nbsp;班&nbsp;&nbsp;时&nbsp;&nbsp;&nbsp;间:</span>
@@ -809,7 +809,7 @@
 										</ul>
 										<div class="jbR-con-lists">
 											<ul class="jbR-con-list clear">
-												<li class="lf txtcenter jbR-short">张珊</li>
+												<li class="lf txtcenter jbR-short">范冰冰</li>
 												<li class="lf txtcenter jbR-long">2017-03-28 09:00:00</li>
 												<li class="lf txtcenter jbR-long">2017-03-28 09:00:00</li>
 												<li class="lf txtcenter jbR-short">08:00</li>
